# async-manager

./: CHANGELOG.md  README.md  pyproject.toml
async_manager/: __init__.py  _facilitation.py  manager.py
docs/: api.md  usage.md
