[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "async_manager"
version = "0.1.1"
description = "A lightweight wrapper for anyio to seamlessly integrate synchronous functions into asynchronous workflows."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "CXPhoenix", email = "0826@fhsh.tp.edu.tw" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Educational Community License, Version 2.0 (ECL-2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: AnyIO",
]
dependencies = [
    "anyio>=4.12.1",
]

